[gd_scene load_steps=10 format=3 uid="uid://drmce1rgl26xj"]

[ext_resource type="Script" path="res://items/chest/chest.gd" id="1_1ohf4"]
[ext_resource type="Texture2D" uid="uid://dk1vn823cmwuj" path="res://items/chest/Chest.png" id="1_o4ase"]
[ext_resource type="AudioStream" uid="uid://d1wysbbrn4qy4" path="res://sounds/chest door open.wav" id="3_pfda6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4e"]
atlas = ExtResource("1_o4ase")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i3js"]
atlas = ExtResource("1_o4ase")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_th00l"]
atlas = ExtResource("1_o4ase")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5skr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dd4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i3js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th00l")
}],
"loop": false,
"name": &"open",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhjj0"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7cve"]

[node name="Chest" type="StaticBody2D" groups=["obstacles"]]
z_index = 1
collision_layer = 512
collision_mask = 11
script = ExtResource("1_1ohf4")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r5skr")
animation = &"open"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_xhjj0")

[node name="InteractZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_o7cve")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1.19209e-07, 4.76837e-07)
scale = Vector2(0.7, 0.8)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pfda6")
volume_db = 18.0
pitch_scale = 0.7

[connection signal="body_entered" from="InteractZone" to="." method="_on_interact_zone_body_entered"]
